--- a/Agendamento/WebContent/indexAdmin.xhtml
+++ b/Agendamento/WebContent/indexAdmin.xhtml
@@ -5,7 +5,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <ui:composition template="TemplatePadrao.xhtml">
-        <ui:param name="titulo" value="Sistema de reserva de Projetores"/>
+        <ui:param name="titulo" value="#{msg.sistemaReservaProjetores}"/>
         <ui:define name="corpo">
         </ui:define>
     </ui:composition>
