--- a/Agendamento/WebContent/listarProjetor.xhtml
+++ b/Agendamento/WebContent/listarProjetor.xhtml
@@ -5,13 +5,13 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <ui:composition template="TemplatePadrao.xhtml">
-        <ui:param name="titulo" value="Lista de Projetores"/>
+        <ui:param name="titulo" value="#{msg.listProjetor}"/>
         <ui:define name="corpo">
             <h:form>
                 <h:dataTable value="#{projetorUC.projetores}" var="projetor" binding="#{projetorUC.select}" headerClass="cabecalho" rowClasses="impar,par" styleClass="tabela">
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="N&uacute;mero do Patrim&ocirc;nio"/>
+                            <h:outputText value="#{msg.numPatrimonio}"/>
                         </f:facet>
                         <h:commandLink action="#{projetorUC.selecione}">
                         	<h:outputText value="#{projetor.numeroPatrimonio}"/>
@@ -19,13 +19,13 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="Campus"/>
+                            <h:outputText value="#{msg.campus}"/>
                         </f:facet>
                         <h:outputText value="#{projetor.campus}"/>
                     </h:column>                    
                 </h:dataTable>
-                <h:commandLink action="#{projetorUC.novo}" value="Novo"/>
-                <h:link outcome="indexAdmin" value="Home"/>
+                <h:commandLink action="#{projetorUC.novo}" value="#{msg.novo}"/>
+                <h:link outcome="indexAdmin" value="#{msg.home}"/>
             </h:form>
         </ui:define>
     </ui:composition>
