--- a/Agendamento/WebContent/formProjetor.xhtml
+++ b/Agendamento/WebContent/formProjetor.xhtml
@@ -8,20 +8,20 @@
         <ui:param name="titulo" value="#{msg.cadPatrimonio}"/>
         <ui:define name="corpo">
 			<h:form>
-				<h:messages></h:messages>
+				<h:messages styleClass="erroGeral"></h:messages>
 				<h:panelGrid columns="3">
 				    <h:outputLabel value="#{msg.numPatrimonio}:"/>
-					<h:inputText id="patrimonio" value="#{projetorUC.projetor.numeroPatrimonio}" required="true"/>
-					<h:message for="patrimonio"></h:message>
+					<h:inputText id="patrimonio" value="#{projetorUC.projetor.numeroPatrimonio}" label="#{msg.numPatrimonio}" required="true"/>
+					<h:message for="patrimonio" styleClass="erro"></h:message>
 		
 				    <h:outputLabel value="#{msg.campus}:"/>
-					<h:selectOneRadio id="campus" value="#{projetorUC.projetor.campus}" required="true">
+					<h:selectOneRadio id="campus" value="#{projetorUC.projetor.campus}" label="#{msg.campus}" required="true">
 						<f:selectItem itemLabel="1" itemValue="1"/>
 						<f:selectItem itemLabel="2" itemValue="2"/>
 						<f:selectItem itemLabel="3" itemValue="3"/>
 						<f:selectItem itemLabel="4" itemValue="4"/>
 					</h:selectOneRadio>
-					<h:message for="campus"/>
+					<h:message for="campus" styleClass="erro"/>
 		
 				</h:panelGrid>
 				
