--- a/Agendamento/WebContent/formSala.xhtml
+++ b/Agendamento/WebContent/formSala.xhtml
@@ -10,21 +10,21 @@
 			<h:form id="formSala">
 				<h:panelGrid columns="3">
 					<h:outputLabel value="#{msg.campus}:"/>
-					<h:selectOneRadio id="campus" value="#{salaUC.sala.campus}" required="true">
+					<h:selectOneRadio id="campus" value="#{salaUC.sala.campus}" label="#{msg.campus}" required="true">
 						<f:selectItem itemLabel="1" itemValue="1"/>
 						<f:selectItem itemLabel="2" itemValue="2"/>
 						<f:selectItem itemLabel="3" itemValue="3"/>
 						<f:selectItem itemLabel="4" itemValue="4"/>
 					</h:selectOneRadio>
-					<h:message for="campus"/>
+					<h:message for="campus" styleClass="erro"/>
 		
 				    <h:outputLabel value="#{msg.bloco}:"/>
-					<h:inputText id="bloco" value="#{salaUC.sala.bloco}" required="true"/>
-					<h:message for="bloco"/>
+					<h:inputText id="bloco" value="#{salaUC.sala.bloco}" label="#{msg.bloco}" required="true"/>
+					<h:message for="bloco" styleClass="erro"/>
 		
 				    <h:outputLabel value="#{msg.sala}:"/>
-					<h:inputText id="sala" value="#{salaUC.sala.numeroSala}" required="true"/>
-					<h:message for="sala"/>
+					<h:inputText id="sala" value="#{salaUC.sala.numeroSala}" label="#{msg.sala}" required="true"/>
+					<h:message for="sala" styleClass="erro"/>
 				</h:panelGrid>
 				<h:commandButton value="#{msg.salvar}" action="#{salaUC.salvar}"/>
                 <h:commandButton value="#{msg.cancelar}" action="#{salaUC.cancelar}" immediate="true"/>				
