--- a/Agendamento/WebContent/index.xhtml
+++ b/Agendamento/WebContent/index.xhtml
@@ -12,7 +12,7 @@
             <f:loadBundle basename="messages" var="msg"/>
     	<div id="login">
 			<fieldset>
-    			<legend>Login:</legend>
+    			<legend>#{msg.login}:</legend>
     			<h:form>
     				<h:messages styleClass="erroGeral"></h:messages>
 					<h:panelGrid columns="3">
